# ros_icp_tutorial

./: CMakeLists.txt  README.md  package.xml
launch/: gcip_bag.launch  icp_bag.launch
pcd/: 0000_desk.pcd  0001_desk.pcd  0002_desk.pcd  0003_desk.pcd  0004_desk.pcd  0005_desk.pcd  0006_desk.pcd  0007_desk.pcd  0008_desk.pcd  0009_desk.pcd  0010_desk.pcd  0011_desk.pcd  0012_desk.pcd  0013_desk.pcd  Kdtree_AllinOne.pcd  acc.pcd  acc_w_normal.pcd  cloud_cluster_0.pcd  madeby.pcd  madeby2.pcd  madeby_up.pcd  table_scene_lms400_downsampled.pcd  table_scene_lms400_uniformsampled.pcd
rviz/: icp.rviz
script/: 3dmesh.ipynb
src/: downsampling.cpp  example_voxelgrid.cpp  icp.cpp  icp_2.cpp  m2t.cpp  open3d_tutorial.py  pcd_read.cpp  pcl_icp.cpp  pcl_shptr_1.cpp  ransac.cpp  restration_visualizer.cpp  test_b.cpp  test_gicp.cpp  test_icp.cpp
test/: downsampling.cpp  example.cpp  example_voxelgrid.cpp  harris_3d.cpp  kdtree.cpp  noise.cpp  normal.cpp  passthrough.cpp  pcd_write.cpp  pcl_shptr_2.cpp  pcl_shptr_3.cpp  ransac.cpp  transform.cpp  uniformsampling.cpp  upsampling.cpp
