<?xml version="1.0"?>
<package format="2">
  <name>ros_icp_tutorial</name>
  <version>0.0.0</version>
  <description>The icp_tutorial package</description>

  <maintainer email="jm@todo.todo">jm</maintainer>


  <!-- One license tag required, multip GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>

  </export>
</package>
